<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_main">

    <fragment
        android:id="@+id/nav_main"
        android:name="com.example.mydebts.ui.main.MainFragment"
        android:label="@string/main"
        tools:layout="@layout/fragment_main" />

    <fragment
        android:id="@+id/nav_debts"
        android:name="com.example.mydebts.ui.debts.MyDebtsFragment"
        android:label="@string/my_debts"
        tools:layout="@layout/fragment_debts" />

    <fragment
        android:id="@+id/nav_oves_me"
        android:name="com.example.mydebts.ui.owesme.OwesMeFragment"
        android:label="@string/someone_oves_me"
        tools:layout="@layout/fragment_owes_me" />
</navigation>